--- a/proTenis/web/index.xhtml
+++ b/proTenis/web/index.xhtml
@@ -7,6 +7,7 @@
     </h:head>
     <h:body>
         Hello from Facelets
+        hola soy carlos modifique desde git
         <br />
         <h:link outcome="welcomePrimefaces" value="Primefaces welcome page" />
     </h:body>
